--- a/Stronghold/Stronghold/Stronghold.vcxproj
+++ b/Stronghold/Stronghold/Stronghold.vcxproj
@@ -154,6 +154,8 @@
     <ClCompile Include="AVLNode.cpp" />
     <ClCompile Include="AVLTree.cpp" />
     <ClCompile Include="Castle.cpp" />
+    <ClCompile Include="FibonacciHeapNode.cpp" />
+    <ClCompile Include="FibonacciHeapTree.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Soldier.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -163,6 +165,8 @@
     <ClInclude Include="AVLNode.h" />
     <ClInclude Include="AVLTree.h" />
     <ClInclude Include="Castle.h" />
+    <ClInclude Include="FibonacciHeapNode.h" />
+    <ClInclude Include="FibonacciHeapTree.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="QueueLinkedList.h" />
