--- a/Stronghold/Stronghold/Stronghold.vcxproj.filters
+++ b/Stronghold/Stronghold/Stronghold.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="FibonacciHeapNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Army.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FibonacciHeapNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Army.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
